# variadic_nonsense

./: CMakeLists.txt  README.md  debug.hpp  filter.hpp  main.cpp  prisoner.cpp  prisoner.hpp  stats.hpp  varargs_utils.hpp
